# llm-behavior-eval

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  MLFLOW_INTEGRATION.md  README.md  batch_run_eval.sh  evaluate.py  pyproject.toml  requirements.txt  upload_to_notion.py  vis-openai.py
.claude/commands/: lbe-eval-assistant.md  lbe-results-analysis.md
.claude/skills/eval-assistant/: SKILL.md
.claude/skills/interpret-results/: SKILL.md
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS
.github/workflows/: create-release.yaml  deploy-docs.yaml  deploy_to_pypi.yaml  pyrefly.yaml  pyright.yaml  ruff.yaml  tests.yaml  ty.yaml  vulnerability-scan.yaml
act-events/: pr.json
dataset_processing_scripts/: convert_cbbq_eval_output.py  upload_cbbq_to_hub.py
docs/: conf.py  index.rst  kaka.ipynb
evaluation_utils/: base_evaluator.py  bbq_dataset.py  bias_evaluate_factory.py  dataset_config.py  eval_config.py  free_text_bias_evaluator.py  multiple_choice_bias_evaluator.py  prompts.py  util_functions.py
examples/: mlflow_example.py  presets_customization.py  quickstart.py  run_bbq_bias.py  run_hallu_general.py  run_hallu_medical.py  run_unqover_bias.py
hirundo_notion_tools/: test_upload_to_notion.py  upload_to_notion.py
llm_behavior_eval/: __init__.py  evaluate.py  export_excel.py  install_skills.py
llm_behavior_eval/evaluation_utils/: api_eval_engine.py  base_evaluator.py  bbq_dataset.py  bias_dataset.py  bias_evaluate_factory.py  cbbq_dataset.py  cbbq_evaluator.py  custom_dataset.py  dataset_config.py  enums.py  eval_config.py  eval_engine.py  evaluate_factory.py  free_text_bias_evaluator.py  free_text_hallu_evaluator.py  free_text_injection_evaluator.py  gemini_eval_engine.py  litellm_utils.py  max_batch_size.py  metrics.py  multiple_choice_bias_evaluator.py  multiple_choice_evaluator.py  plotting.py  plugin_eval_engine.py  prompts.py  sampling_config.py  transformers_eval_engine.py  util_functions.py  vllm_config.py  vllm_eval_engine.py  vllm_types.py
llm_behavior_eval/skills/: lbe_eval_assistant.md  lbe_results_analysis.md
results/: summary.csv
results/gemma-3-4b-it/bbq-age-bias-free-text_DatasetType.BIAS_TextFormat.FREE_TEXT/: metrics.csv
tests/: conftest.py  test_api_eval_engine.py  test_base_evaluator.py  test_cbbq_dataset.py  test_cbbq_metrics.py  test_collator.py  test_custom_dataset.py  test_dataset.py  test_dataset_config.py  test_eval_config.py  test_eval_engine_interface.py  test_eval_engines.py  test_evaluate_cli.py  test_export_excel.py  test_free_text_bias_evaluator.py  test_free_text_utils.py  test_gpu_regression.py  test_mlflow_integration.py  test_multiple_choice.py  test_multiple_choice_evaluator.py  test_plotting.py  test_upload_cbbq_to_hub.py  test_upload_to_notion.py  test_util_functions.py
typings/mlflow/: __init__.pyi
typings/mlflow/entities/: __init__.pyi
typings/vllm/: __init__.pyi
