[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
llm-behavior-eval = "llm_behavior_eval.evaluate:app"

[project]
name = "llm-behavior-eval"
version = "0.1.1"
description = "Evaluate large-language models for undesirable behaviors such as bias."
authors = [{ name = "Hirundo", email = "dev@hirundo.io" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
keywords = [
  "dataset",
  "machine learning",
  "data science",
  "data engineering",
  "large language models",
  "LLMs evaluation",
  "bias evaluation",
  "bias in LLMs",
]
requires-python = ">=3.10"

dependencies = [
  "datasets==3.6.0",
  "numpy==2.2.6",
  "pandas==2.3.1",
  "pydantic==2.11.7",
  "pydantic_settings==2.10.1",
  "torch==2.6.0",
  "transformers==4.54.1",
  "networkx==3.4.2",
  "pytest==8.4.1",
  "typer",
  "accelerate==1.10.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.11.11,<1.0.0",
  "bumpver>=2024.1130",
  "pyright>=1.1.399",
  "pytest>=8.3.5",
]
docs = [
  "sphinx>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["llm_behavior_eval*"]
exclude = ["results*"]

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"

[tool.bumpver.file_patterns]
"pyproject.toml" = ['^version = "{version}"$']
"llm_behavior_eval/__init__.py" = ['^__version__ = "{version}"$']

[project.urls]
Homepage = "https://github.com/Hirundo-io/llm-behavior-eval"
