[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
llm-behavior-eval = "llm_behavior_eval.evaluate:app"

[project]
name = "llm-behavior-eval"
version = "0.1.4b1"
description = "Evaluate large-language models for undesirable behaviors such as bias."
authors = [{ name = "Hirundo", email = "dev@hirundo.io" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
keywords = [
  "dataset",
  "machine learning",
  "data science",
  "data engineering",
  "large language models",
  "LLMs evaluation",
  "bias evaluation",
  "bias in LLMs",
]
requires-python = ">=3.10.12"
# Please only install Python >=3.10.12 or >=3.11.4 or >=3.12 to avoid GHSA-4xh5-x5gv-qwph vulnerability
dependencies = [
  "datasets<4.0.0",
  "numpy<3.0.0",
  "pandas<3.0.0",
  "pydantic<3.0.0",
  "pydantic_settings<3.0.0",
  "torch<3.0.0",
  "transformers<5.0.0",
  "networkx<4.0.0",
  "pytest<9.0.0",
  "typer<1.0.0",
  "accelerate<2.0.0",
  "bitsandbytes<1.0.0; platform_system != \"Darwin\"",
]

[project.optional-dependencies]
mlflow = [
  "mlflow>=2.0.0",
]

[dependency-groups]
dev = [
  "ruff>=0.11.11,<1.0.0",
  "bumpver>=2024.1130",
  "basedpyright>=1.31.6",
  "pytest>=8.3.5",
]
docs = [
  "sphinx>=8.0.0",
]

[tool.uv.dependency-groups]
docs = {requires-python = ">=3.11.4"}


[tool.setuptools.packages.find]
include = ["llm_behavior_eval*"]
exclude = ["results*"]

[tool.bumpver]
current_version = "0.1.4b1"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"

[tool.bumpver.file_patterns]
"pyproject.toml" = ['^version = "{version}"$', '^current_version = "{version}"$']
"llm_behavior_eval/__init__.py" = ['^__version__ = "{version}"$']

[project.urls]
Homepage = "https://github.com/Hirundo-io/llm-behavior-eval"

[tool.pyright]
typeCheckingMode = "standard"